crates/pcb-zen/tests/snapshots/module_loading_remote__load_kicad_symbol_from_default_alias.snap
---
source: crates/pcb-zen/tests/module_loading_remote.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "R_0402_1005Metric:R_0402_1005Metric")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "R1") (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd"))
      (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd")
      (property (name "Reference") (value "U1"))
      (property (name "symbol_path") (value "/Users/davide/Library/Caches/diode_star/gitlab/kicad/libraries/kicad-symbols/9.0.0/Device.kicad_sym"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "IN")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "OUT")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
  )
)
